# ChatServer_LLM

./: CMakeLists.txt  README.md  docker-compose.yml
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/database/: database.h
include/server/model/: chatbot.hpp  friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessage.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
mysql/: init.sql
nginx/: nginx.conf
src/client/: CMakeLists.txt  Dockerfile  main.cpp
src/server/: CMakeLists.txt  Dockerfile  chatserver.cpp  chatservice.cpp  main.cpp
src/server/database/: database.cpp
src/server/model/: chatbot.cpp  friendmodel.cpp  groupmodel.cpp  offlinemessage.cpp  usermodel.cpp
src/server/redis/: redis.cpp
test/: test_llm  test_llm.cpp
